2006-03-05 nowel

    * ~/src/examples を ~/examples に移動しました。
    
2006-02-20 nowel

    * ID アノテーション使用時に identity の指定ができなくなっているのを修正しました。

2006-01-31 nowel 

================ S2Dao.PHP5-1.0.0-beta3 更新履歴 ===================
    * DBMS の対応が増えました。現在対応しているDBMSは以下です。
        - MySql
        - PostgreSQL
        - SQLite
        - Oracle
    * ID アノテーションに対応しました。
    * COLUMN アノテーションに対応しました。
    * RELNO アノテーションに対応しました。
    * RELKEYS アノテーションに対応しました。
    * ARGS アノテーションを使用しなくても、メソッドの引数名を取得できるようになりました。
    * S2Dao(Java) の version 1.0.29 とほぼ同等になりました。
    * SQL 文にて SELECT COUNT(*) FROM EMP などのように、単一の数値を返す場合の処理を変更しました。
      SELECT のすぐ後ろに COUNT, MAX, MIN が来た場合は結果セットをそのまま返却します。
    * fix: Array_, find メソッド使用時の不具合を修正しました。
    * fix: PEAR::DB の情報が残っており正しく動作しない不具合を修正しました。
    * fix: 型の判定を修正しました。
    * fix: findObject 使用時に stdClass が戻されるのを修正しました。

2006-01-22 nowel

    * src/phing/task/* 及び build.xml は S2Container.PHP5 のプロジェクトに移行しました。
        phar パッケージ及び pear パッケージ作成の際は S2Container.PHP5 から行ってください。
    * src/example/s2dao_orign に S2Dao(java) の Exapme を作成しました。

2006-01-15 nowel

    * N:1 マッピングに対応しました。
        ***_RELNO アノテーション, ***_RELKEYS アノテーションに対応しました。
    * ***_ARGS アノテーションが指定されない場合に、メソッドの引数名を使用するように変更しました。
        - JAVA では メソッドの引数名に対してリフレクションできませんでしたが、PHP5.1.x では
        　可能であるため、対応させました。
            現段階では、メソッドの初期値に null が設定されている場合には設定しません。

        ex)
            method_SQL = "select * from hoge where foo = /*id*/ and bar = /*bar*/
            public function method($id, $bar);

2006-01-13 nowel

    * S2Dao_PropertyTypeImpl を修正しました。
    * S2Dao_AbstractAutoHandler を修正しました。(Oracle対応)
    * Array_***, find*** メソッド利用時の結果セットを正しく返すように修正しました。
    * Oracle 使用時のバグを修正しました。
        - Oracle での Null の扱いについては pdo.dicon の optionで設定してください

2006-01-12 nowel

    * Oracle 利用可能になりました。
    * PHP ファイル内の文字列を "(ダブルクォート) から '(シングルクォート)に変更しました。

2006-01-11 nowel

    * dbms.properties を変更しました。

2006-01-07 nowel

    * AnnotationReaderFactory を追加しました。
        Java 版 S2Dao 1.0.29 と同じ物です。 